# fairness-project-german-credit

./: .gitignore  GermanCredit_IADAT708.ipynb  README.fr.md  README.md  nb_01_exploration.ipynb  nb_02_baseline.ipynb  nb_03_fairness.ipynb  nb_04_interpretability.ipynb  nb_04_interpretability_robustness.ipynb  nb_05_robustness.ipynb  notebook.ipynb  notebook_simple_labels.ipynb  pyproject.toml  responsiveAI-german-credit_rapport.tex  responsiveAI-german-credit_rapport_compile.sh  responsiveAI-german-credit_rendu.ipynb
doc/: compiler.sh  explication-parcours-simple.tex  explication-parcours-simple_beamer.tex  todo_team.txt
german_credit_rai/: __init__.py  __main__.py  cli.py  pipeline.py
julien/: README.md  compiler.sh  explication-parcours-simple.tex  explication-parcours-simple_beamer.tex  fairness.tex  note_analyse.tex  requirements.txt  responsiveAI-german-credit.ipynb  responsiveAI-german-credit_light.ipynb  responsiveAI-german-credit_rapport.tex  responsiveAI-german-credit_rendu.ipynb
outputs/: notebook_executed.ipynb
outputs/final_run/: metrics.json  metrics_overview.csv  permutation_importance_baseline.csv  permutation_importance_fair.csv  predictions_clean.csv  predictions_perturbed.csv  shap_summary_baseline.csv  shap_summary_fair.csv  shap_values_baseline.csv  shap_values_fair.csv  summary.md
outputs/final_run_age/: metrics.json  metrics_overview.csv  permutation_importance_baseline.csv  permutation_importance_fair.csv  predictions_clean.csv  predictions_perturbed.csv  shap_summary_baseline.csv  shap_summary_fair.csv  shap_values_baseline.csv  (+2 more)
